Test failures
Signed-off-by: Rob Stryker <rob@oxbeef.net>

Sonar cleanup

Signed-off-by: Rob Stryker <rob@oxbeef.net>

Forgot stringbuilder

Signed-off-by: Rob Stryker <rob@oxbeef.net>